# SquirrelCommunicator

./: .gitignore  .gitmodules  DownloadSubmodules.sh  README.md
.github/workflows/: android-build.yml  linux-build.yml  web-build.yml  windows-build.yml
Project/: Android.mk  CMakeLists.txt
Project/Source/Private/: Project.cpp
Project/SourcesTest/: MainTestFile.cpp
ProjectServer/: CMakeLists.txt  CMakePresets.json
ProjectServer/Assets/Config/: ServerSettings.ini
ProjectServer/Source/Private/: ProjectEngine.cpp  UserManager.cpp
ProjectServer/Source/Public/: ProjectEngine.h  ProjectGameMode.h  UserManager.h
ProjectServer/SourcesTest/: MainTestFile.cpp
ServerProject/: CMakeLists.txt
ServerProject/Source/Private/: ProjectGameMode.cpp
ServerProject/Source/Public/: Project.h  ProjectEngine.h
config/: README.md  config-generic.sh  config-ios-xcode.sh  config-mac-xcode.sh  config-tvos-xcode.sh  config-uwp.bat  config-visionos-xcode.sh  config-web-unix.sh  config-web-win.bat  config-win.bat  srv-config-win.bat
